Image Cropper Size + Sidebar Style Fix

--- a/src/app/layout/main-layout/main-layout.component.scss
+++ b/src/app/layout/main-layout/main-layout.component.scss
@@ -7,5 +7,4 @@
     overflow-y: auto;
     padding-top: 100px;
     flex-grow: 1;
-    z-index: 1;
 }
